[gd_scene load_steps=5 format=2]

[ext_resource path="res://Textures/bat.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Bat.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1.49219, 1.00781 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1.69531, 0.953125 )

[node name="Bat" type="KinematicBody2D" groups=[
"enemy",
]]
collision_layer = 2
script = ExtResource( 2 )
speed = 35

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="SwitchDirectionTimer" type="Timer" parent="."]
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3.5, 4.00781 )
shape = SubResource( 1 )

[node name="Invulnerable" type="Timer" parent="."]
wait_time = 0.5

[node name="AttackArea" type="Area2D" parent="."]
position = Vector2( 3.5, 4 )
gravity = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( 0.0234375, 0.226563 )
shape = SubResource( 2 )
[connection signal="timeout" from="Invulnerable" to="." method="_on_Invulnerable_timeout"]
